# rust_quotes_api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
src/: main.rs
src/routes/: get_quotes.rs  get_quotes_by_author.rs  get_random_quote.rs  mod.rs
src/utils/: mod.rs  read_quotes_json.rs  types.rs
